# Diamas

./: .gitattributes  .gitignore  CMakeLists.txt  Diamas.code-workspace  build.bat  build.sh  build.yml  build_clang.sh  create_vs_project.bat  dependency_builder.py  rebuild.bat  rebuild.sh
source/client/: .gitignore  CMakeLists.txt
source/client/eterBase/: CMakeLists.txt  CPostIt.cpp  CPostIt.h  CRC32.cpp  CRC32.h  Debug.cpp  Debug.h  FileDir.cpp  FileDir.h  FileLoader.cpp  FileLoader.h  Filename.h  JunkMacros.h  Random.cpp  Random.h  SimpleTimer.h  Singleton.h  StdAfx.cpp  StdAfx.h  Stl.cpp  Stl.h  Timer.cpp  Timer.h  UnicodeHelper.cpp  UnicodeHelper.h  Utils.cpp  Utils.h  WinVerHelper.h  WorkQueue.h  cipher.cpp  cipher.h  error.cpp  error.h  lzo.cpp  lzo.h  stl_utils.h  tea.cpp  tea.h
source/client/eterCythonLib/: CMakeLists.txt
source/client/eterEffectLib/: CMakeLists.txt  EffectData.cpp  EffectData.h  EffectElementBase.cpp  EffectElementBaseInstance.cpp  EffectElementBaseInstance.h  EffectInstance.cpp  EffectInstance.h  EffectManager.cpp  EffectManager.h  EffectMesh.cpp  EffectMesh.h  EffectMeshInstance.cpp  EffectMeshInstance.h  EffectUpdateDecorator.cpp  EffectUpdateDecorator.h  EmitterProperty.cpp  EmitterProperty.h  FrameController.cpp  FrameController.h  ParticleInstance.cpp  ParticleInstance.h  ParticleProperty.cpp  ParticleProperty.h  ParticleSystemData.cpp  ParticleSystemInstance.cpp  ParticleSystemInstance.h  SimpleLightData.cpp  SimpleLightData.h  SimpleLightInstance.cpp  SimpleLightInstance.h  StdAfx.h  Type.cpp  Type.h
source/client/eterGameLib/: ActorInstance.cpp  ActorInstance.h  ActorInstanceAttach.cpp  ActorInstanceBattle.cpp  ActorInstanceBlend.cpp  ActorInstanceCollisionDetection.cpp  ActorInstanceData.cpp  ActorInstanceEvent.cpp  ActorInstanceFly.cpp  ActorInstanceInterface.h  ActorInstanceMotion.cpp  ActorInstanceMotionEvent.cpp  ActorInstancePosition.cpp  ActorInstanceRender.cpp  ActorInstanceRotation.cpp  ActorInstanceSync.cpp  ActorInstanceWeaponTrace.cpp  Area.cpp  Area.h  AreaLoaderThread.cpp  AreaLoaderThread.h  AreaTerrain.cpp  AreaTerrain.h  CMakeLists.txt  DungeonBlock.cpp  DungeonBlock.h  FlyHandler.h  FlyTarget.cpp  FlyTarget.h  FlyTrace.cpp  FlyTrace.h  FlyingData.cpp  FlyingData.h  FlyingInstance.cpp  FlyingInstance.h  FlyingObjectManager.cpp  FlyingObjectManager.h  GameEventManager.cpp  GameLibDefines.h  GameType.cpp  (+58 more)
source/client/eterGrnLib/: CMakeLists.txt  LODController.cpp  LODController.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelInstanceCollisionDetection.cpp  ModelInstanceModel.cpp  ModelInstanceMotion.cpp  ModelInstanceRender.cpp  ModelInstanceUpdate.cpp  Motion.cpp  Motion.h  StdAfx.h  Thing.cpp  Thing.h  ThingInstance.cpp  ThingInstance.h  Util.cpp  Util.h
source/client/eterImageLib/: CMakeLists.txt  DXTCImage.cpp  DXTCImage.h  Image.cpp  Image.h  StdAfx.h  TGAImage.cpp  TGAImage.h
source/client/eterLib/: AttributeData.cpp  AttributeData.h  AttributeInstance.cpp  AttributeInstance.h  BlockTexture.cpp  BlockTexture.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionData.cpp  CollisionData.h  ColorTransitionHelper.cpp  ColorTransitionHelper.h  CullingManager.cpp  CullingManager.h  Decal.cpp  Decal.h  DibBar.cpp  DibBar.h  Dimm.h  Dynamic.h  EnvironmentMap.cpp  Event.h  FileLoaderThread.cpp  FileLoaderThread.h  GrpBase.cpp  GrpBase.h  GrpCollisionObject.cpp  GrpCollisionObject.h  GrpColor.cpp  GrpColor.h  GrpColorInstance.cpp  GrpColorInstance.h  GrpD3DXBuffer.cpp  GrpD3DXBuffer.h  GrpDIB.cpp  GrpDIB.h  GrpDetector.cpp  GrpDetector.h  GrpDevice.cpp  (+101 more)
source/client/eterPythonLib/: CMakeLists.txt  PythonGraphic.cpp  PythonGraphic.h  PythonGraphicImageModule.cpp  PythonGraphicModule.cpp  PythonGraphicTextModule.cpp  PythonGraphicThingModule.cpp  PythonGridSlotWindow.cpp  PythonGridSlotWindow.h  PythonSlotWindow.cpp  PythonSlotWindow.h  PythonWindow.cpp  PythonWindow.h  PythonWindowManager.cpp  PythonWindowManager.h  PythonWindowManagerModule.cpp  StdAfx.cpp  StdAfx.h
source/client/eterScriptLib/: CMakeLists.txt  PythonDebugModule.cpp  PythonLauncher.cpp  PythonLauncher.h  PythonMarshal.cpp  PythonUtils.cpp  PythonUtils.h  Resource.cpp  Resource.h  StdAfx.cpp  StdAfx.h
source/client/eterSecurity/: AntiDebug.cpp  AntiInputInjection.cpp  AntiMacro.cpp  AnticheatManager.cpp  AnticheatManager.h  AnticheatWatchdog.cpp  CMakeLists.txt  CheatQuarentineManager.cpp  CheatQuarentineManager.h  CheatQueueManager.cpp  CheatQueueManager.h  DllInjectionCheck.cpp  DumpProtection.cpp  Elevation.cpp  Exception.cpp  Exception.h  ExceptionFilter.cpp  File.cpp  File.h  FileIdentifier.cpp  HandleScanner.cpp  MappedFileIdentifier.cpp  MemoryScanner.cpp  NTDefinations.h  ParentCheck.cpp  ProcessNameHelper.h  ProcessScanner.cpp  ProtectionMacros.h  PythonModuleCheck.cpp  PythonStackCheck.cpp  PythonStackCheck.h  RSA.cpp  RSA.h  Random.cpp  Random.h  ScreenProtection.cpp  Secret.cpp  Secret.h  SectionIntegrityScanner.cpp  StartAddressController.cpp  (+30 more)
source/client/eterSoundLib/: CMakeLists.txt  SoundBase.cpp  SoundBase.h  SoundData.cpp  SoundData.h  SoundInstance.h  SoundInstance2D.cpp  SoundInstance3D.cpp  SoundInstanceStream.cpp  SoundManager.cpp  SoundManager.h  SoundManager2D.cpp  SoundManager3D.cpp  SoundManager3D.h  SoundManagerStream.cpp  SoundManagerStream.h  Stdafx.h  Type.cpp  Type.h
source/client/eterSphereLib/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  frustum.cpp  frustum.h  pool.h  sphere.cpp  sphere.h  spherepack.cpp  spherepack.h  vector.h
source/client/eterTerrainLib/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  Terrain.cpp  Terrain.h  TerrainType.h  TextureSet.cpp  TextureSet.h
source/client/eterTreeLib/: CMakeLists.txt  (+19 more)
source/server/: .gitignore  CMakeLists.txt
source/utilities/: CMakeLists.txt
tools/: CMakeLists.txt
tools/CoreWatcher/: CMakeLists.txt
tools/DumpProto/: CMakeLists.txt  Importer.sln
tools/DumpProto_cmake/: CMakeLists.txt
tools/GrannyConverter/: CMakeLists.txt
tools/M2TxtToJson/: .gitignore  CMakeLists.txt
tools/MSAMaker/: CMakeLists.txt
(+2115 files in other folders)
