cmake_minimum_required(VERSION 3.2)
project(eterWebBrowser)

file(GLOB ETERWEBBROWSER_HEADERS
    "${PROJECT_SOURCE_DIR}/*.h"
)
file(GLOB ETERWEBBROWSER_SOURCES
   "${PROJECT_SOURCE_DIR}/*.c"
#    "${PROJECT_SOURCE_DIR}/*.cpp"
)

add_library(${PROJECT_NAME} STATIC ${ETERWEBBROWSER_HEADERS} ${ETERWEBBROWSER_SOURCES})
